--- a/paymentform.html
+++ b/paymentform.html
@@ -7,6 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <title>Document</title>
 </head>
 
@@ -18,7 +19,7 @@
         </label>
         <label class="logo">Logo</label>
         <ul class="navbar">
-          <li><a class="" href="start.html">Home</a></li>
+          <li><a class="" href="index.html">Home</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Community Forum</a></li>
           <li><a href="#">Login</a></li>
@@ -69,7 +70,7 @@
                     </label> <input type="text" required class="input-group" placeholder="Enter CVV">
                 </div>
                 <div class="card-footer">
-                    <button type="button" class="btn-proceed" onclick="window.location.href='/index.html'"> back
+                    <button type="button" class="btn-proceed" onclick="window.location.href='/checkout.html'"> back
                     </button>
                     <button type="button" class="btn-proceed"> Confirm Payment </button>
 
@@ -178,6 +179,40 @@
                 </div>
             </form>
         </div>
+    </div> 
+    <footer class="footer">
+        <div class="waves">
+          <div class="wave" id="wave1"></div>
+          <div class="wave" id="wave2"></div>
+          <div class="wave" id="wave3"></div>
+          <div class="wave" id="wave4"></div>
+        </div>
+        <ul class="social-icon">
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-linkedin"></ion-icon>
+            </a></li>
+          <li class="social-icon__item"><a class="social-icon__link" href="#">
+              <ion-icon name="logo-instagram"></ion-icon>
+            </a></li>
+        </ul>
+        <ul class="menu">
+          <li class="menu__item"><a class="menu__link" href="#">Home</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">About</a></li>
+          <li class="menu__item"><a class="menu__link" href="#">Community Forum</a></li>
+
+          <li class="menu__item"><a class="menu__link" href="#">Contact</a></li>
+    
+        </ul>
+        <p>&copy;2021 Team CDFL | All Rights Reserved</p>
+      </footer>
+      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>   
         
 </body>
 
