--- a/checkout.html
+++ b/checkout.html
@@ -24,6 +24,7 @@
       <li><a href="#">Login</a></li>
     </ul>
   </nav>
+  <embed type="image/jpg" class="embeded-img" src="Blog-cover2-1.jpg">
   <div class="icontainer-body">
     <div class="icontainer">
       <strong style="font-size: larger;">
