--- a/paymentform.html
+++ b/paymentform.html
@@ -157,19 +157,17 @@
                 </div>
             </form>--> <!-- End -->
             <form class="form" id="tab4">
-                <div class="form-group"> 
+                <div class="radioform-group"> 
                     <input type="radio" id="Gpay" value="Gpay" name="payment-opt"
-                        class="input-group "> <label for="Gpay">Gpay</label>
+                        class="radioinput-group "><label for="Gpay">Gpay</label>
                 </div>
-                <div class="form-group"> 
-                    <input type="radio" id="PhonePe" value="PhonePe" name="payment-opt" class="input-group">
+                <div class="radioform-group"> 
+                    <input type="radio" id="PhonePe" value="PhonePe" name="payment-opt" class="radioinput-group">
                     <label for="PhonePe">PhonePe</label>
                 </div>
-                <div class="form-group"> 
-                    <div>
-                        <input class="input-group" type="radio" id="Paytm" name="payment-opt" value="Paytm"> 
+                <div class="radioform-group"> 
+                        <input class="radioinput-group" type="radio" id="Paytm" name="payment-opt" value="Paytm"> 
                         <label for="Paytm">Paytm</label>
-                    </div>
                 </div>
                 <div class="card-footer">
                     <button type="button" class="btn-proceed" onclick="window.location.href='/index.html'"> back
