--- a/about.html
+++ b/about.html
@@ -19,42 +19,16 @@
     <label class="logo">Logo</label>
     <ul class="navbar">
       <li><a class="" href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
+      <li><a href="#">About</a></li>
       <li><a href="#">Community Forum</a></li>
       <li><a href="#">Login</a></li>
     </ul>
   </nav>
-  <embed type="image/jpg" class="responsive" src="Blog-cover2-1.jpg">
-  <div class="icontainer-body">
-    <div class="icontainer">
-      <strong style="font-size: larger;">
-        Payment details
-      </strong>
-      <table class="bill">
-        <tr>
-          <th width="25%">Details</th>
-          <th width="10%">Quantity</th>
-          <th width="10%">Price</th>
-        </tr>
-        <tr>
-          <td>1 year elite subscription </td>
-          <td>1</td>
-          <td>$99</td>
-        </tr>
-        <tr>
-          <td>Consultation Fees</td>
-          <td>1</td>
-          <td>$150</td>
-        </tr>
-      </table>
-      <label class="bill-conc">The total payable amount is :</label>
-      <div class="ibtn">
-        <button class="btn-proceed" onclick="window.location.href='/paymentform.html'">
-          Proceed
-        </button>
-      </div>
-    </div>
+  <div class="video">
+      
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/yN9frfmufbI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
+  
 
 
   <footer class="footer">
