--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <label class="logo">Logo</label>
         <ul class="navbar">
           <li><a class="" href="index.html">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="#">Community Forum</a></li>
           <li><a href="#">Login</a></li>
         </ul>
